# coding_templates

./: .gitignore  README.md  nix-ld-libraries.md
PyQt5/: pyproject.toml  requirements.txt  shell.nix
arduino/: Run.sh  shell.nix
arduino/src/: Run.sh  sketch.yaml  src.ino
cmake-adv/: .clang-format  CMakeLists.txt  shell.nix
cmake-adv/cmake/: FindClangFormat.cmake  FindCoverage.cmake  FindHtmlCoverage.cmake
cmake-adv/src/: CMakeLists.txt  lib.c  lib.h
cmake-adv/test/: CMakeLists.txt  lib-test.c
cmake-basic/: CMakeLists.txt  shell.nix
cmake-basic/src/: main.c
jupyter/: jupytext.toml  requirements.txt  shell.nix
maven/: shell.nix
python/: shell.nix
