include_directories(${CMAKE_SOURCE_DIR}/src)

find_package(Valgrind)
message(STATUS "VALGRIND_EXECUTABLE=${VALGRIND_EXECUTABLE}")
if(VALGRIND_EXECUTABLE)
  set(VALGRIND ${VALGRIND_EXECUTABLE})
endif()

file(GLOB FILES "${CMAKE_SOURCE_DIR}/test/*.c")
message(STATUS "FILES=${FILES}")

foreach(FILENAME ${FILES})
  get_filename_component(SRC ${FILENAME} NAME)
  get_filename_component(TEST ${FILENAME} NAME_WE)
  add_executable(${TEST} ${FILENAME} ${CMAKE_SOURCE_DIR}/src/lib.h)
  add_dependencies(${TEST} lib)
  target_link_libraries(${TEST} lib)
  add_test("${TEST}" ./${TEST})
  if(VALGRIND)
    add_test("${TEST}[valgrind]" ${VALGRIND} --leak-check=full --quiet --error-exitcode=1 ./${TEST})
  endif()
endforeach()
